--- a/M7.md
+++ b/M7.md
@@ -1,1 +1,20 @@
 Uf1
+
+Lenguajes de servidor:
+
+  -Common Gateway Interface (CGI)
+  S'instalen a la carpeta CGIbin del servidor.
+  Son processos externs al servidor que retornen normalment un html al servidor que aquest retornarà al client.
+  
+  -ASP / ASP.NET
+  Sistema de plantilles de windows
+  
+  -PHP
+  Codigo libre.
+  Lenguaje de plantillas. Lenguaje de scripting basada en C.
+  
+  -JSP (java server pages)
+  
+  -Servlets Java
+  Programa que añade funcionalidades al servidor.
+  
