--- a/M7.md
+++ b/M7.md
@@ -18,3 +18,5 @@ Lenguajes de servidor:
   -Servlets Java
   Programa que añade funcionalidades al servidor.
   
+Lenguajes de scripting PHP
+  ES un lenguajed de plantillas conetiquetas <?php ?> (no posar espais en blanc).
